# eksi-api

./: README.md  pyproject.toml  requirements.txt
src/eksi_api/: __init__.py  app.py  parser.py
src/eksi_parser/: __init__.py
tests/: test_app.py
