[project]
name = "eksi-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.46.0",
    "beautifulsoup4>=4.12.3",
    "fastapi[standard]>=0.112.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
